k8s/base/miam-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: miam
  labels:
    name: miam
    app: miam
